更新了更换背景图片的算法

--- a/RELauncher3/App.config
+++ b/RELauncher3/App.config
@@ -55,6 +55,9 @@
             <setting name="BGPPath" serializeAs="String">
                 <value>null</value>
             </setting>
+            <setting name="StartBoxIsBlack" serializeAs="String">
+                <value>True</value>
+            </setting>
         </RELauncher3.Properties.Settings>
     </userSettings>
 </configuration>
