--- a/RELauncher3/Properties/Settings.settings
+++ b/RELauncher3/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="BGPPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">null</Value>
     </Setting>
+    <Setting Name="StartBoxIsBlack" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
