增加细节 添加Bing每日图片

--- a/RELauncher3/App.config
+++ b/RELauncher3/App.config
@@ -58,6 +58,9 @@
             <setting name="StartBoxIsBlack" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="BingDaily" serializeAs="String">
+                <value>False</value>
+            </setting>
         </RELauncher3.Properties.Settings>
     </userSettings>
 </configuration>
