--- a/RELauncher3/Properties/Settings.settings
+++ b/RELauncher3/Properties/Settings.settings
@@ -53,5 +53,8 @@
     <Setting Name="StartBoxIsBlack" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="BingDaily" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
